k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: word-train-service
spec:
  type: NodePort
  selector:
    app: word-train-app
  ports:
    - port: 80           # external port
      targetPort: 5000   # container port your app is listening on
      nodePort: 30080    # optional: must be in range 30000–32767
      protocol: TCP
